# neocities

./: .gitignore  CLAUDE.md  Makefile  README.md  build.py  generate_poems.py  go.mod  go.sum  home.html  hugo.toml  new_post.py  pyproject.toml  template.html  templates.py
.github/workflows/: deploy-to-neocities.yml  deploy.yml
archetypes/: books.md  journal.md  movies.md
assets/: styles.css
cmd/feed-sentiment/: main.go  main_test.go
cmd/generate-words/: main.go
cmd/render-poems/: main.go
content/barter/: _index.md
content/books/: acts-of-worship.md  brothers-karamazov.md  capitalist-realism.md  demian.md  demons.md  the-alchemist.md  the-trial.md
content/feed/: 2026-04-24_094640.md  2026-05-03_182225.md  _index.md  first-tattoo-apt.md  first-tattoo.md  index.md  jackfruit.md  jane-remover-tix.md  john-roedel-poem.md  lip-pierced.md  love-sf.md  sebi-and-kimj.md  took-nate-to-er.md  wasians.md  y2k-brad-pitt.md
content/fridge-poems/: _index.md
content/guestbook/: _index.md
content/journal/: _index.md  april-is-near.md  cotton-balls.md  fort-ross-jenny-diego-eug.md  kari-out.md  kese.md  married-next-year.md  men-seni.md  on-white-men.md  osamu-dazai.md  quiet-eye.md  speaking-with-god.md
content/movies/: all-thats-left-of-you.md  arrival.md  chime.md  dead-poets-society.md  good-fellas.md  hoppers.md  project-hail-mary.md  serpents-path.md  sirat.md  weapons.md
content/poems/: bruhjuice.json  (+11 more)
data/: barter.yaml  feed_sentiment.json  fridge_words.yaml  poems_manifest.yaml
layouts/: index.html
public/: epiccoolgirl.html  index.html  yurt.html
(+242 files in other folders)
